--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "finding picture and transfer it into visual form",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js",
-    "start": "electron ."
+    "start": "electron .",
+    "server": "live-server --port=8080 --open=/home.html",
+    "babel-win": ".\\node_modules\\.bin\\babel js -d dist"
   },
   "author": "kapakino",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "babel-cli": "^6.26.0",
     "electron": "^27.1.3"
   },
   "dependencies": {
-    "babylonjs": "^6.32.1"
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "babylonjs": "^6.32.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
