--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
-    "babylonjs": "^6.32.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "babylonjs": "^6.32.1"
   }
 }
