--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "server": "live-server --port=8080 --open=/home.html",
+    "live-server": "live-server --port=8080 --open=/home.html",
+    "server": "node .\\js\\server.js",
     "babel-win": ".\\node_modules\\.bin\\babel js -d dist"
   },
   "author": "kapakino",
@@ -20,6 +21,8 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
-    "babylonjs": "^6.32.1"
+    "babylonjs": "^6.32.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
