--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^9.1.3",
     "babylonjs": "^6.32.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jimp": "^0.22.10"
   }
 }
