--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "electron .",
     "live-server": "live-server --port=8080 --open=/home.html",
     "server": "node .\\js\\server.js",
-    "babel-win": ".\\node_modules\\.bin\\babel js -d dist"
+    "babel-win": ".\\node_modules\\.bin\\babel js -d dist",
+    "build": "electron-packager . kapakinoRGBCollector --platform=win32 --arch=x64 --out=win32 --ignore=\".gitignore\" --ignore=\"node_modules\" --ignore=\"dist\" --ignore=\"test\" --ignore=\"linux\" --overwrite",
+    "build-linux":"electron-packager . kapakinoRGBCollector --platform=linux --arch=x64 --out=linux --ignore=\".gitignore\" --ignore=\"node_modules\" --ignore=\"dist\" --ignore=\"test\" --ignore=\"win32\"  --overwrite"
   },
   "author": "kapakino",
   "license": "ISC",
@@ -15,7 +17,8 @@
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.6",
     "babel-cli": "^6.26.0",
-    "electron": "^27.1.3"
+    "electron": "^27.1.3",
+    "electron-packager": "^17.1.2"
   },
   "dependencies": {
     "@babel/preset-env": "^7.23.6",
